kubernetes/services/media/radarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media 
spec:
  ports:
  - name: web
    port: 7878
  selector:
    app: radarr
