kubernetes/services/media/radarr/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingressroute
  namespace: jellyfin
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`radarr.kube.eggenberg.io`)
    kind: Rule
    services:
    - name: radarr
      port: 7878
  tls:
    secretName: radarr-certificate-secret
